...
        android:layoutDirection="rtl"
        android:text="Z-A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/gallery_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="100dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:scrollbars="horizontal"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonAsc"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="Add new image"
        android:translationX="10dp"
...
